--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "assert": "^1.1.1",
     "bundle-loader": "^0.5.1",
+    "expose-loader": "0.5.3",
     "jsx-loader": "^0.10.2",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.4",
