--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pushstate-server": "^0.2.0",
     "react": "0.11.0",
     "react-router": "git://github.com/rackt/react-router#async-props",
+    "uglify-js": "2.4.15",
     "when": "3.5.0"
   },
   "devDependencies": {
