--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "0.4.0",
     "mach": "git://github.com/mjackson/mach#1.0",
+    "node-jsx": "0.11.0",
     "pushstate-server": "^0.2.0",
     "react": "0.11.0",
     "react-router": "git://github.com/rackt/react-router#async-props",
