--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "react": "0.11.0",
     "react-router": "git://github.com/rackt/react-router#async-props",
     "uglify-js": "2.4.15",
-    "when": "3.5.0"
-  },
-  "devDependencies": {
-    "assert": "^1.1.1",
+    "when": "3.5.0",
     "bundle-loader": "^0.5.1",
     "expose-loader": "0.5.3",
     "jsx-loader": "^0.10.2",
+    "react-tools": "0.11.2",
+    "webpack": "^1.3.0-beta5"
+  },
+  "devDependencies": {
+    "assert": "^1.1.1",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.4",
     "karma-cli": "0.0.4",
@@ -28,8 +30,6 @@
     "karma-mocha": "^0.1.4",
     "karma-webpack": "^1.2.1",
     "mocha": "^1.20.1",
-    "react-tools": "0.11.2",
-    "webpack": "^1.3.0-beta5",
     "webpack-dev-server": "^1.4.6"
   }
 }
