--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "0.11.5",
     "react-tools": "0.11.2",
     "uglify-js": "2.4.15",
+    "uuid": "2.0.1",
     "webpack": "^1.3.0-beta5",
     "when": "3.5.0"
   },
