--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "0.4.0",
     "bundle-loader": "0.5.2",
+    "cookie": "0.1.2",
     "expose-loader": "0.5.3",
     "jsx-loader": "0.12.2",
     "node-jsx": "0.12.4",
