--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "axios": "0.4.2",
     "bundle-loader": "0.5.2",
-    "cookie": "0.1.2",
+    "cookies": "0.5.0",
     "expose-loader": "0.5.3",
     "jsx-loader": "0.12.2",
     "node-jsx": "0.12.4",
